--- a/src/docs/asciidoc/exchange.adoc
+++ b/src/docs/asciidoc/exchange.adoc
@@ -8,13 +8,9 @@ operation::exchange-controller-test/create-success[snippets="http-request,http-r
 
 operation::exchange-controller-test/offer-respond-success[snippets="http-request,request-fields,http-response"]
 
-=== 교환 신청 정보 조회
-
-operation::exchange-controller-test/find-exchange-offer[snippets="http-request,http-response"]
-
 === 교환 내역 조회
 
-operation::exchange-controller-test/find-exchanges-success[snippets="http-request,http-response"]
+operation::exchange-controller-test/find-exchanges-by-condition-success[snippets="http-request,request-fields,http-response"]
 
 === 교환 삭제
 
